# TQ_GUI

./: CMakeLists.txt  CppInterface.cpp  CppInterface.h  Dockerfile  README.md  main.cpp  main.qml
